all bugs fixed